objects/ClassPlan__c.object
<CustomObject>
    <description>ClassPlan</description>
    <label>ClassPlan</label>
    <nameField>
        <label>ClassPlan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ClassPlans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>ClassPlan1__c</fullName>
        <label>ClassPlan1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>classplan2__c</fullName>
        <label>classplan2</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>classplan3__c</fullName>
        <label>classplan3</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberEmail__c</fullName>
        <label>MemberEmail</label>
        <type>Email</type>
    </fields>
</CustomObject>